--- a/db/package.json
+++ b/db/package.json
@@ -14,7 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "console.table": "^0.10.0",
     "express": "^4.17.1",
+    "inquirer": "^8.1.0",
+    "mysql2": "^2.2.5",
     "sqlite3": "^5.0.2"
   }
 }
