--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/cocobeware83/employee-tracker/issues"
   },
-  "homepage": "https://github.com/cocobeware83/employee-tracker#readme"
+  "homepage": "https://github.com/cocobeware83/employee-tracker#readme",
+  "dependencies": {
+    "console.table": "^0.10.0",
+    "inquirer": "^8.0.0",
+    "mysql2": "^2.2.5"
+  }
 }
